--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,14 @@
 .App {
-  text-align: center;
+  background-color: #212121;
+  min-height:1024px;
+  color: #F1F1F1;
+  font:Amiko;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
 .App-title {
   font-size: 1.5em;
 }
@@ -25,4 +20,10 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.Containing{
+  width:90;
+  margin-right: auto;
+  margin-left: auto;
 }
