--- a/src/components/conferenceForms/MakeConferenceForm.css
+++ b/src/components/conferenceForms/MakeConferenceForm.css
@@ -6,7 +6,7 @@
 
 .conference {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   flex-direction: column;
   /* max-width: 50% */
   align-items: center;
@@ -20,7 +20,8 @@
   border-top: #212121;
   border-width: 1px;
   margin: 10px;
-  color: #f1f1f1
+  color: #f1f1f1;
+  min-width: 300px;
 }
 .form1 {
   display: flex;
@@ -41,6 +42,9 @@
   width: 200px;
   border-radius: 30px;
   font-size: 20px;
+  border-color: #3A7DC7;
+  /* box-shadow: none; */
+  border: 0;
 
 }
 tr {
@@ -48,4 +52,5 @@ tr {
 }
 .table {
   margin: 40px;
+  min-width: 500px;
 }
