--- a/src/components/session/Piece.css
+++ b/src/components/session/Piece.css
@@ -1,6 +1,6 @@
 .Piece{
     width:70px;
     height:70px;
-    background-color: white;
+    background-color: rgb(89, 89, 7);
     margin:10px;
 }
