--- a/src/components/session/Piece.css
+++ b/src/components/session/Piece.css
@@ -1,13 +1,66 @@
 .Piece{
     width:70px;
-    height:70px;
-    margin:10px;
+    height:70px; 
+    border: 1px solid white; 
 }
 
 .white{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(225, 0, 0);
 }
 
 .yellow{
     background-color: rgb(255, 255, 0);
+}
+
+
+
+  
+  .t{
+   width: 20px;
+    height: 20px;
+    top: -1.5em;
+    left: 2em;
+    -webkit-border-radius: 4em;
+    -moz-border-radius: 4em;
+    border-radius: 4em;
+    
+  }
+  
+  .r{
+    width: 2em;
+  height: 2em;
+  top: 2em;
+  left: 5.5em;
+  -webkit-border-radius: 4em;
+  -moz-border-radius: 4em;
+  border-radius: 4em;
+
+  }
+  
+  .b{ 
+   width: 1.8em;
+    height: 1.8em;
+    top: 4.5em;
+    left: 2.2em;
+    -webkit-border-radius: 4em;
+    -moz-border-radius: 4em;
+    border-radius: 4em;
+    
+  }
+  
+  .l{ 
+   width: 1.8em;
+    height: 1.8em;
+    top: 2.2em;
+    left: -.4em;
+    -webkit-border-radius: 4em;
+    -moz-border-radius: 4em;
+    border-radius: 4em;
+   
+  }
+
+  .Piece{
+    width:70px;
+    height:70px;
+    margin:10px;   
 }
