--- a/src/components/session/Puzzle.css
+++ b/src/components/session/Puzzle.css
@@ -1,13 +1,15 @@
 .Puzzle{
-    width: 1000px;
-    height: 400px;
+    width: 100%;
+    height: 100%;
     max-width: 1000px;
     max-height: 400px;
     display: flex;
     flex-wrap:wrap;
-    border: 5px;
-    border-style: solid;
-    border-color: white;
+    /* border: 2px; */
+    /* border-style: solid;
+    border-color: #ffd02b; */
+    background-color: #212121;
+
 }
 .row{
     display: flex;
