--- a/src/components/session/Session.css
+++ b/src/components/session/Session.css
@@ -13,11 +13,17 @@
 .participants {
   margin-bottom: 50px;
 }
-.code1 {
+/* .code1 {
   display: flex
-}
+} */
 .codeTitle {
 
   margin: auto;
   margin-left: 30px;
+}
+.TopicPuzzle {
+  color: #FFD02B;
+  font-size: 20pt;
+  text-align: center;
+  /* margin-bottom: 20ox; */
 }
